hphp/hack/test/typecheck/contravariance_bad1.php.like_types.exp
File "contravariance_bad1.php", line 33, characters 12-14:
Some type constraint(s) here are violated (Typing[4110])
File "contravariance_bad1.php", line 16, characters 17-17:
'T' is a constrained type parameter
File "contravariance_bad1.php", line 16, characters 17-17:
Some type constraint(s) are violated here
File "contravariance_bad1.php", line 16, characters 17-17:
T is a constrained type parameter
File "contravariance_bad1.php", line 33, characters 16-16:
Expected A
File "contravariance_bad1.php", line 16, characters 17-17:
But got dynamic
